fix overflowing feedback links

--- a/static/css/place/place.scss
+++ b/static/css/place/place.scss
@@ -146,6 +146,8 @@ $chart-border: 0.5px solid #dee2e6;
 }
 
 .subtopic .row .col {
+  display: flex;
+  flex-direction: column;
   padding: 0.5rem;
 }
 
@@ -176,9 +178,9 @@ $chart-border: 0.5px solid #dee2e6;
 .chart-container {
   border: $chart-border;
   border-radius: 3px;
-  height: 100%;
   padding: 10px;
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   position: relative;
 }
@@ -376,6 +378,6 @@ $chart-border: 0.5px solid #dee2e6;
 .feedback {
   color: #70757a !important;
   font-style: italic;
-  float: right;
+  text-align: right;
   text-decoration: none !important;
 }
